# practice

books/rwh/01/: WC.hs
books/rwh/02/: lastButOne.hs
books/rwh/03/: Direction.hs  List.hs
exercises/dailyprogrammer/: README.md
exercises/dailyprogrammer/0170/: easy_input_01.txt  easy_input_02.txt
exercises/project_euler/: README.md
languages/haskell/lens-example/: lens-example.cabal
languages/haskell/lens-example/src/: Pong.hs
languages/haskell/lens-example/src/Conway/: Cell.hs  Main.hs  World.hs
languages/haskell/lens-example/src/Pong/: Pong.hs
