-- lens-examples copy by hand. see
-- https://github.com/ekmett/lens/blob/master/examples/lens-examples.cabal
name: lens-examples
category: Data, Lenses
version: 0.1
license: BSD3
cabal-version: >= 1.8
license-file: LICENSE
author: Niklas Haas
maintainer: Edward A. Kmett <ekmett@gmail.com>
stability: provisional
homepage: http://github.com/ekmett/lens/
bug-reports: http://github.com/ekmett/lens/issues
copyright: Copyright (C) 2012 Edward A. Kmett
synopsis: Lenses, Folds and Traversals
description: Pong Example

build-type: Simple
tested-with: GHC == 7.4.1

source-repository head
  type: git
  location: git://github.com/ekmett/lens.git

flag pong
  default: True

executable lens-pong
  if !flag(pong)
    buildable: False

  build-depends:
    base,
    containers,
    gloss == 1.8.*,
    lens,
    mtl,
    random
  main-is: Pong.hs
  hs-source-dirs: src/Pong

executable lens-conway
  build-depends:
    base,
    containers,
    gloss == 1.8.*,
    lens,
    mtl,
    random,
    vector
  main-is: Main.hs
  hs-source-dirs: src/Conway
